removed useless slides

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -121,66 +121,72 @@
 	    \end{frame}
         
         \begin{frame}{Immunology Basics}
-            Lymphocytes are produced in the Bone Marrow and can be of two types:
+            A few important types of cells to keep in mind:
             \vspace{1em}
             % SC: I see no reason why we should take 9 slides just to show this hierarchy
             % SC: In fact, I see not reason why we should introduce this hierarchy at all. AIS abstracts all of these.
         	\begin{itemize}
-                \item B-Cells
-%                \begin{itemize}
-%                	\item Plasmablast (short-lived)
-%                    \item Plasma Cell (long-lived)
-%                    \item Memory B-Cell
-%                \end{itemize}
-            	\item T-Cells
-%                \begin{itemize}
-%                	\item T-Helper Cells
-%                    \item T-Cytotoxic Cells
-%                    \item T-Suppressor Cells
-%                \end{itemize}
+        	    \item Leukocytes (from the Innate IS)
+                \item B-Cells (makes Memory cells)
+            	\item T-Cells (activate immune responses)
          	\end{itemize}
     	\end{frame}
-    	
-    	\begin{frame}{Immunology Basics}
-            \textbf{B-Cells}
-            \vspace{1em}
-            \begin{itemize}
-                \item Originated and matured in the Bone Marrow;
-                \item Contains receptors which identify pathogens;
-                \item Offers three types of response:
-                    \begin{itemize}
-                        \item Fast-Weak (plasmablast)
-                        \item Longterm-Strong (plasma)
-                        \item Fastest-Strongest (memory)
-                    \end{itemize}
-            \end{itemize}
-        \end{frame}
-        
-        \begin{frame}{Immunology Basics}
-          \textbf{T-Cells}
-          \vspace{1em}
-          \begin{itemize}
-              \only<1>{\item Originated in the bone marrow
-              % SC: All cells are originated in the bone marrow, the difference is that B-cells are already matured by the time they exit the bone marrow, whereas T-Cells are sent to the Thymus for maturation via negative selection.
-              \item Matured in the Thymus
-          	  \item Captures signals from B-Cells' receptors
-          	  \item Helps B-Cells differentiate}
-              \only<2>{\item Reacts to viruses and tumour cells
-          	  \item Suppress other auto-reactive immune cells
-          	  \item Takes care of lingering infection elements}
-          \end{itemize}
-        \end{frame}
+
+%    	\begin{frame}{Immunology Basics}
+%            \textbf{B-Cells}
+%            \vspace{1em}
+%            \begin{itemize}
+%                \item Originated and matured in the Bone Marrow;
+%                \item Contains receptors which identify pathogens;
+%                \item Offers three types of response:
+%                    \begin{itemize}
+%                        \item Fast-Weak (plasmablast)
+%                        \item Longterm-Strong (plasma)
+%                        \item Fastest-Strongest (memory)
+%                    \end{itemize}
+%            \end{itemize}
+%        \end{frame}
+%        
+%        \begin{frame}{Immunology Basics}
+%          \textbf{T-Cells}
+%          \vspace{1em}
+%          \begin{itemize}
+%              \only<1>{\item Originated in the bone marrow
+%              % SC: All cells are originated in the bone marrow, the difference is that B-cells are already matured by the time they exit the bone marrow, whereas T-Cells are sent to the Thymus for maturation via negative selection.
+%              \item Matured in the Thymus
+%          	  \item Captures signals from B-Cells' receptors
+%          	  \item Helps B-Cells differentiate}
+%              \only<2>{\item Reacts to viruses and tumour cells
+%          	  \item Suppress other auto-reactive immune cells
+%          	  \item Takes care of lingering infection elements}
+%          \end{itemize}
+%        \end{frame}
                          
         \begin{frame}{Immunology Basics}
             \textbf{How does an immune response work?}
             
             \begin{itemize}
                 \item Pathogen enters the environment;
+                \pause
                 \item B-Cell receptors recognise pathogens;
+                \pause
                 \item Immune cells are called to arms;
+                \pause
                 \item Pathogen is destroyed;
+                \pause
                 \item Lingering infected cells are destroyed;
+                \pause
                 \item Strong responses are memorised.
+            \end{itemize}
+        \end{frame}
+        
+        \begin{frame}{Immunology Basics}
+            \textbf{It all comes down to:}
+        
+            \begin{itemize}
+                \item Host system defence
+                \item Pattern recognition
+                \item Information collection (memory cells!)
             \end{itemize}
         \end{frame}
         
@@ -209,7 +215,7 @@
             \begin{figure}
                 \centering
                 \includegraphics[width=0.7\textwidth]{fig/phagocytosis}
-                \caption{When the antigen is overwhelmed, the cavalry arrives to save the day.}
+                \caption{When the antigen is overwhelmed, the cavalry arrives to save the day. The depicted cell is a phagocyte.}
             \end{figure}
         \end{frame}
         
