--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -720,6 +720,10 @@
         \end{itemize}
     \end{frame}
     
+    \begin{frame}{Applications}
+        
+    \end{frame}
+    
     \begin{frame}{Extra: Danger Theory}
 		\begin{itemize}
 		    \item Molecules don't distinguish \textit{self} from \textit{non-self};
@@ -728,7 +732,7 @@
 	        \item Danger Theory explains some facts about immunology, like tumours, auto-immune responses and beneficial bacteria found within our bodies.
 	    \end{itemize}
 	\end{frame}
-
+	
     \begin{frame}
     	TODO: Set-up References
     \end{frame}     
@@ -740,12 +744,4 @@
         \hfill
         \includegraphics[width=85px]{fig/blade_runner}}
         
-            
-	\begin{frame}{Challenge}
-        \begin{itemize}
-			\item Collaborative Filtering
-            \item Movie Recommendation System
-            \item OMDB
-		\end{itemize}
-   \end{frame}
 \end{document}
